--- a/backprojetapi/src/main/resources/application.properties
+++ b/backprojetapi/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:h2:mem:productsdb
+server.port=8000
+
+spring.datasource.url=jdbc:h2:mem:articlesdb
+
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
